Polish enahkras lament (#2294)
* refactor: modernize

* fix: Correct Shadow Room locations and IDs

* Updated EL file with .editorconfig working