@@ -55,123 +55,163 @@ import java.util.*;
 
 public class EnakhrasLament extends BasicQuestHelper
 {
-	//Items Required
-	ItemRequirement pickaxe, chiselHighlighted, sandstone32, sandstone20, base, body, head, granite2, granite, leftArm, rightArm, leftLeg,
-		rightLeg, kSigil, rSigil, mSigil, zSigil, softClay, camelMould, camelHead, breadOrCake, fireSpellRunes, airSpellRunes,
-		mapleLog, log, oakLog, willowLog, coal, candle, air2, chaos, earth2, sandstone5, tinderbox, crumbleUndeadRunes, sandstone52,
-		airStaff, airRuneOrStaff, earthRuneOrStaff, earthStaff;
+	// Required items
+	ItemRequirement pickaxe;
+	ItemRequirement chiselHighlighted;
+	ItemRequirement sandstone32;
+	ItemRequirement sandstone20;
+	ItemRequirement granite2;
+	ItemRequirement granite;
+	ItemRequirement softClay;
+	ItemRequirement breadOrCake;
+	ItemRequirement fireSpellRunes;
+	ItemRequirement airSpellRunes;
+	ItemRequirement mapleLog;
+	ItemRequirement log;
+	ItemRequirement oakLog;
+	ItemRequirement willowLog;
+	ItemRequirement coal;
+	ItemRequirement candle;
+	ItemRequirement air2;
+	ItemRequirement chaos;
+	ItemRequirement earth2;
+	ItemRequirement sandstone5;
+	ItemRequirement tinderbox;
+	ItemRequirement crumbleUndeadRunes;
+	ItemRequirement sandstone52;
+	ItemRequirement airStaff;
+	ItemRequirement airRuneOrStaff;
+	ItemRequirement earthRuneOrStaff;
+	ItemRequirement earthStaff;
 
+	// Mid-quest requirements
+	ItemRequirement base;
+	ItemRequirement body;
+	ItemRequirement head;
+	ItemRequirement leftArm;
+	ItemRequirement rightArm;
+	ItemRequirement leftLeg;
+	ItemRequirement rightLeg;
+	ItemRequirement kSigil;
+	ItemRequirement rSigil;
+	ItemRequirement mSigil;
+	ItemRequirement zSigil;
+	ItemRequirement camelMould;
+	ItemRequirement camelHead;
+
+	// Miscellaneous requirements
 	SpellbookRequirement onNormals;
+	VarbitRequirement hasPlacedBase;
+	VarbitRequirement hasTalkedToLazimAfterBase;
+	VarbitRequirement hasPlacedBody;
+	VarbitRequirement chiseledStatue;
+	VarbitRequirement canChooseHead;
+	ZoneRequirement inTempleEntranceRoom;
+	ZoneRequirement inTempleGroundFloor;
+	VarbitRequirement startedTemple;
+	VarbitRequirement gottenLimbs;
+	VarbitRequirement openedDoor1;
+	VarbitRequirement openedDoor2;
+	VarbitRequirement openedDoor3;
+	VarbitRequirement openedDoor4;
+	VarbitRequirement mPlaced;
+	VarbitRequirement kPlaced;
+	VarbitRequirement rPlaced;
+	VarbitRequirement zPlaced;
+	VarbitRequirement goneUpstairs;
+	VarbitRequirement hasGottenRightArm;
+	VarbitRequirement hasGottenRightLeg;
+	ZoneRequirement inCentreRoom;
+	ZoneRequirement inPuzzleFloor;
+	VarbitRequirement fedBread;
+	VarbitRequirement meltedFountain;
+	VarbitRequirement cleanedFurnace;
+	VarbitRequirement litBraziers;
+	VarbitRequirement litLog;
+	VarbitRequirement litOak;
+	VarbitRequirement litWillow;
+	VarbitRequirement litMaple;
+	VarbitRequirement litCandle;
+	VarbitRequirement litCoal;
+	ZoneRequirement inNorthPuzzleRoom;
+	ZoneRequirement inTopRoom;
+	ZoneRequirement inLastRoom;
+	VarbitRequirement wallNeedsChisel;
+	VarbitRequirement finishedWall;
+	PrayerRequirement protectFromMelee;
 
-	Requirement hasPlacedBase, hasTalkedToLazimAfterBase, hasPlacedBody, chiseledStatue, canChooseHead, inTempleEntranceRoom,
-		inTempleGroundFloor, startedTemple, gottenLimbs, openedDoor1, openedDoor2, openedDoor3, openedDoor4, mPlaced, kPlaced,
-		rPlaced, zPlaced, goneUpstairs, hasGottenRightArm, hasGottenRightLeg, inCentreRoom, inPuzzleFloor,
-		fedBread, meltedFountain, cleanedFurnace, litBraziers, litLog, litOak, litWillow, litMaple, litCandle, litCoal, inNorthPuzzleRoom,
-		inTopRoom, inLastRoom, wallNeedsChisel, finishedWall, protectFromMelee;
+	// Steps
+	NpcStep talkToLazim;
+	NpcStep bringLazim32Sandstone;
+	DetailedQuestStep useChiselOn32Sandstone;
+	ObjectStep placeBase;
+	NpcStep bringLazim20Sandstone;
+	DetailedQuestStep useChiselOn20Sandstone;
+	ObjectStep placeBody;
+	NpcStep talkToLazimToChooseHead;
+	NpcStep getGranite;
+	DetailedQuestStep craftHead;
+	NpcStep talkToLazimAboutBody;
+	DetailedQuestStep chiselStatue;
+	NpcStep giveLazimHead;
+	NpcStep talkToLazimInTemple;
+	ObjectStep enterTemple;
+	ObjectStep enterTempleDownLadder;
+	ObjectStep cutOffLimb;
+	ObjectStep takeM;
+	NpcStep talkToLazimForHead;
+	ObjectStep enterDoor1;
+	ObjectStep enterDoor2;
+	ObjectStep enterDoor3;
+	ObjectStep enterDoor4;
+	ObjectStep enterKDoor;
+	ObjectStep enterRDoor;
+	ObjectStep enterMDoor;
+	ObjectStep enterZDoor;
+	ObjectStep takeZ;
+	ObjectStep takeK;
+	ObjectStep takeR;
+	ObjectStep useStoneHeadOnPedestal;
+	ObjectStep useSoftClayOnPedestal;
+	DetailedQuestStep useChiselOnGranite;
+	ObjectStep goUpToPuzzles;
+	NpcStep useBread;
+	NpcStep castAirSpell;
+	NpcStep castFireSpell;
+	ObjectStep useMapleLog;
+	ObjectStep useOakLog;
+	ObjectStep useLog;
+	ObjectStep useWillowLog;
+	ObjectStep useCoal;
+	ObjectStep useCandle;
+	ObjectStep passBarrier;
+	ObjectStep goUpFromPuzzleRoom;
+	NpcStep castCrumbleUndead;
+	ObjectStep goDownToFinalRoom;
+	NpcStep protectThenTalk;
+	ObjectStep repairWall;
+	ObjectStep useChiselOnWall;
+	NpcStep talkToAkthankos;
 
-	DetailedQuestStep talkToLazim, bringLazim32Sandstone, useChiselOn32Sandstone, placeBase, bringLazim20Sandstone,
-		useChiselOn20Sandstone, placeBody, talkToLazimToChooseHead, getGranite, craftHead, talkToLazimAboutBody,
-		chiselStatue, giveLazimHead, talkToLazimInTemple, enterTemple, enterTempleDownLadder, cutOffLimb, takeM,
-		talkToLazimForHead, enterDoor1, enterDoor2, enterDoor3, enterDoor4, enterKDoor, enterRDoor, enterMDoor, enterZDoor,
-		takeZ, takeK, takeR, useStoneHeadOnPedestal, useSoftClayOnPedestal, useChiselOnGranite, goUpToPuzzles, useBread, castAirSpell,
-		castFireSpell, useMapleLog, useOakLog, useLog, useWillowLog, useCoal, useCandle, passBarrier, goUpFromPuzzleRoom, castCrumbleUndead,
-		goDownToFinalRoom, protectThenTalk, repairWall, useChiselOnWall, talkToAkthankos;
-
-	//Zones
-	Zone templeEntranceRoom, templeGroundFloor, centreRoom, puzzleFloor, northPuzzleRoom, topRoom, lastRoom;
+	// Zones
+	Zone templeEntranceRoom;
+	Zone templeGroundFloor;
+	Zone centreRoom;
+	Zone puzzleFloor;
+	Zone northPuzzleRoom;
+	Zone topRoom;
+	Zone lastRoom;
 
 	@Override
-	public Map<Integer, QuestStep> loadSteps()
+	protected void setupZones()
 	{
-		initializeRequirements();
-		setupConditions();
-		setupSteps();
-		Map<Integer, QuestStep> steps = new HashMap<>();
-
-		steps.put(0, talkToLazim);
-
-		ConditionalStep makeAndPlaceBase = new ConditionalStep(this, bringLazim32Sandstone);
-		makeAndPlaceBase.addStep(new Conditions(head, granite), giveLazimHead);
-		makeAndPlaceBase.addStep(new Conditions(granite2, canChooseHead), craftHead);
-		makeAndPlaceBase.addStep(canChooseHead, getGranite);
-		makeAndPlaceBase.addStep(chiseledStatue, talkToLazimToChooseHead);
-		makeAndPlaceBase.addStep(hasPlacedBody, chiselStatue);
-		makeAndPlaceBase.addStep(body, placeBody);
-		makeAndPlaceBase.addStep(sandstone20, useChiselOn20Sandstone);
-		makeAndPlaceBase.addStep(hasTalkedToLazimAfterBase, bringLazim20Sandstone);
-		makeAndPlaceBase.addStep(hasPlacedBase, talkToLazimAboutBody);
-		makeAndPlaceBase.addStep(base, placeBase);
-		makeAndPlaceBase.addStep(sandstone32, useChiselOn32Sandstone);
-
-		steps.put(10, makeAndPlaceBase);
-
-		ConditionalStep exploreBottomLayer = new ConditionalStep(this, enterTemple);
-		exploreBottomLayer.addStep(new Conditions(camelHead, inPuzzleFloor), useStoneHeadOnPedestal);
-		exploreBottomLayer.addStep(camelMould, useChiselOnGranite);
-		exploreBottomLayer.addStep(inPuzzleFloor, useSoftClayOnPedestal);
-		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1, openedDoor2, openedDoor3, openedDoor4), goUpToPuzzles);
-		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1, openedDoor2, openedDoor3, rSigil), enterDoor4);
-		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1, openedDoor2, openedDoor3), takeR);
-		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1, openedDoor2, kSigil), enterDoor3);
-		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1, openedDoor2), takeK);
-		// It's possible to skip the rest of this, but it skips some of the quest story and leaves doors locked after you finish, so this encourages players to explore
-		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1, zSigil), enterDoor2);
-		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1), takeZ);
-		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, mSigil), enterDoor1);
-		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor), takeM);
-		exploreBottomLayer.addStep(new Conditions(startedTemple, inTempleGroundFloor), cutOffLimb);
-		exploreBottomLayer.addStep(inTempleGroundFloor, talkToLazimInTemple);
-		exploreBottomLayer.addStep(inTempleEntranceRoom, enterTempleDownLadder);
-
-		steps.put(20, exploreBottomLayer);
-
-		ConditionalStep puzzles = new ConditionalStep(this, enterTemple);
-		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain, cleanedFurnace, litLog, litOak, litWillow, litMaple, litCandle), useCoal);
-		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain, cleanedFurnace, litLog, litOak, litWillow, litMaple), useCandle);
-		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain, cleanedFurnace, litLog, litOak, litWillow), useMapleLog);
-		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain, cleanedFurnace, litLog, litOak), useWillowLog);
-		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain, cleanedFurnace, litLog), useOakLog);
-		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain, cleanedFurnace), useLog);
-		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain), castAirSpell);
-		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor), castFireSpell);
-		puzzles.addStep(inPuzzleFloor, useBread);
-		puzzles.addStep(inTempleGroundFloor, goUpToPuzzles);
-		puzzles.addStep(inTempleEntranceRoom, enterTempleDownLadder);
-
-		steps.put(30, puzzles);
-
-		ConditionalStep topFloorPuzzle = new ConditionalStep(this, enterTemple);
-		topFloorPuzzle.addStep(inTopRoom, castCrumbleUndead);
-		topFloorPuzzle.addStep(inNorthPuzzleRoom, goUpFromPuzzleRoom);
-		topFloorPuzzle.addStep(inPuzzleFloor, passBarrier);
-		topFloorPuzzle.addStep(inTempleGroundFloor, goUpToPuzzles);
-		topFloorPuzzle.addStep(inTempleEntranceRoom, enterTempleDownLadder);
-
-		steps.put(40, topFloorPuzzle);
-
-		ConditionalStep protectMeleePuzzle = new ConditionalStep(this, enterTemple);
-		protectMeleePuzzle.addStep(inLastRoom, protectThenTalk);
-		protectMeleePuzzle.addStep(inTopRoom, goDownToFinalRoom);
-		protectMeleePuzzle.addStep(inNorthPuzzleRoom, goUpFromPuzzleRoom);
-		protectMeleePuzzle.addStep(inPuzzleFloor, passBarrier);
-		protectMeleePuzzle.addStep(inTempleGroundFloor, goUpToPuzzles);
-		protectMeleePuzzle.addStep(inTempleEntranceRoom, enterTempleDownLadder);
-
-		steps.put(50, protectMeleePuzzle);
-
-		ConditionalStep repairWallForAkthankos = new ConditionalStep(this, enterTemple);
-		repairWallForAkthankos.addStep(new Conditions(inLastRoom, wallNeedsChisel), useChiselOnWall);
-		repairWallForAkthankos.addStep(new Conditions(inLastRoom, finishedWall), talkToAkthankos);
-		repairWallForAkthankos.addStep(inLastRoom, repairWall);
-		repairWallForAkthankos.addStep(inTopRoom, goDownToFinalRoom);
-		repairWallForAkthankos.addStep(inNorthPuzzleRoom, goUpFromPuzzleRoom);
-		repairWallForAkthankos.addStep(inPuzzleFloor, passBarrier);
-		repairWallForAkthankos.addStep(inTempleGroundFloor, goUpToPuzzles);
-		repairWallForAkthankos.addStep(inTempleEntranceRoom, enterTempleDownLadder);
-
-		steps.put(60, repairWallForAkthankos);
-
-		return steps;
+		templeEntranceRoom = new Zone(new WorldPoint(3124, 9328, 1), new WorldPoint(3128, 9330, 1));
+		templeGroundFloor = new Zone(new WorldPoint(3074, 9282, 0), new WorldPoint(3133, 9341, 0));
+		centreRoom = new Zone(new WorldPoint(3098, 9306, 0), new WorldPoint(3110, 9318, 0));
+		puzzleFloor = new Zone(new WorldPoint(3086, 9305, 1), new WorldPoint(3121, 9326, 1));
+		northPuzzleRoom = new Zone(new WorldPoint(2095, 9319, 1), new WorldPoint(3112, 9335, 1));
+		topRoom = new Zone(new WorldPoint(3097, 9299, 2), new WorldPoint(3113, 9334, 2));
+		lastRoom = new Zone(new WorldPoint(3096, 9291, 1), new WorldPoint(3112, 9302, 1));
 	}
 
 	@Override
@@ -260,22 +300,7 @@ public class EnakhrasLament extends BasicQuestHelper
 		tinderbox = new ItemRequirement("Tinderbox", ItemID.TINDERBOX).isNotConsumed();
 
 		onNormals = new SpellbookRequirement(Spellbook.NORMAL);
-	}
 
-	@Override
-	protected void setupZones()
-	{
-		templeEntranceRoom = new Zone(new WorldPoint(3124, 9328, 1), new WorldPoint(3128, 9330, 1));
-		templeGroundFloor = new Zone(new WorldPoint(3074, 9282, 0), new WorldPoint(3133, 9341, 0));
-		centreRoom = new Zone(new WorldPoint(3098, 9306, 0), new WorldPoint(3110, 9318, 0));
-		puzzleFloor = new Zone(new WorldPoint(3086, 9305, 1), new WorldPoint(3121, 9326, 1));
-		northPuzzleRoom = new Zone(new WorldPoint(2095, 9319, 1), new WorldPoint(3112, 9335, 1));
-		topRoom = new Zone(new WorldPoint(3097, 9299, 2), new WorldPoint(3113, 9334, 2));
-		lastRoom = new Zone(new WorldPoint(3096, 9291, 1), new WorldPoint(3112, 9302, 1));
-	}
-
-	public void setupConditions()
-	{
 		hasPlacedBase = new VarbitRequirement(VarbitID.ENAKH_STATUE_MULTIVAR, 1);
 		hasPlacedBody = new VarbitRequirement(VarbitID.ENAKH_STATUE_MULTIVAR, 2);
 		chiseledStatue = new VarbitRequirement(VarbitID.ENAKH_STATUE_MULTIVAR, 3);
@@ -327,11 +352,15 @@ public class EnakhrasLament extends BasicQuestHelper
 		protectFromMelee = new PrayerRequirement("Protect from Melee", Prayer.PROTECT_FROM_MELEE);
 	}
 
+
 	public void setupSteps()
 	{
-		talkToLazim = new NpcStep(this, NpcID.ENAKH_LAZIM, new WorldPoint(3190, 2925, 0), "Before you begin, ensure that you have enough prayer points to use Protect from Melee for around five seconds (you will need this later in the temple). Talk to Lazim in the quarry south of the Bandit Camp.", pickaxe, onNormals);
+		talkToLazim = new NpcStep(this, NpcID.ENAKH_LAZIM, new WorldPoint(3190, 2925, 0), "Before you begin, ensure that you have enough prayer points to use" +
+			" Protect from Melee for around five seconds (you will need this later in the temple). Talk to Lazim in the quarry south of the Bandit Camp.",
+			pickaxe, onNormals);
 		talkToLazim.addDialogSteps("Yes.", "Of course!");
-		bringLazim32Sandstone = new NpcStep(this, NpcID.ENAKH_LAZIM, new WorldPoint(3190, 2925, 0), "Get 32kg of sandstone and give it to Lazim. This can be done in batches, and you can mine some nearby.");
+		bringLazim32Sandstone = new NpcStep(this, NpcID.ENAKH_LAZIM, new WorldPoint(3190, 2925, 0), "Get 32kg of sandstone and give it to Lazim. This can be " +
+			"done in batches, and you can mine some nearby.");
 		bringLazim32Sandstone.addDialogStep("Okay, I'll get on with it.");
 		bringLazim32Sandstone.addDialogStep("Yes, I have more stone.");
 		bringLazim32Sandstone.addDialogStep("Here's a large 10 kg block.");
@@ -343,7 +372,8 @@ public class EnakhrasLament extends BasicQuestHelper
 		talkToLazimAboutBody = new NpcStep(this, NpcID.ENAKH_LAZIM, new WorldPoint(3190, 2925, 0), "Talk to Lazim again.");
 		talkToLazimAboutBody.addDialogStep("I'll do it right away!");
 
-		bringLazim20Sandstone = new NpcStep(this, NpcID.ENAKH_LAZIM, new WorldPoint(3190, 2925, 0), "Get 20kg of sandstone and give it to Lazim. This can be done in batches, and you can mine some nearby.");
+		bringLazim20Sandstone = new NpcStep(this, NpcID.ENAKH_LAZIM, new WorldPoint(3190, 2925, 0), "Get 20kg of sandstone and give it to Lazim. This can be " +
+			"done in batches, and you can mine some nearby.");
 		bringLazim20Sandstone.addDialogStep("I'll do it right away!");
 		bringLazim20Sandstone.addDialogStep("Yes, I have more stone.");
 		bringLazim20Sandstone.addDialogStep("Here's a large 10 kg block.");
@@ -353,23 +383,31 @@ public class EnakhrasLament extends BasicQuestHelper
 
 		useChiselOn20Sandstone = new DetailedQuestStep(this, "Use a chisel on the sandstone 20kg.", chiselHighlighted, sandstone20);
 		placeBody = new ObjectStep(this, ObjectID.ENAKH_STATUE_EAST_MULTILOC, new WorldPoint(3190, 2926, 0), "Place the body on the sandstone base.", body);
-		talkToLazimToChooseHead = new NpcStep(this, NpcID.ENAKH_LAZIM, new WorldPoint(3190, 2925, 0), "Talk to Lazim and choose the head you'd like the statue to have.");
+		talkToLazimToChooseHead = new NpcStep(this, NpcID.ENAKH_LAZIM, new WorldPoint(3190, 2925, 0), "Talk to Lazim and choose the head you'd like the " +
+			"statue to have.");
 		getGranite = new NpcStep(this, NpcID.ENAKH_LAZIM, new WorldPoint(3190, 2925, 0), "Get 2 x granite (5kg). You can mine some nearby.", granite2);
 
 		// TODO: Change head highlight text based on choice
-		craftHead = new DetailedQuestStep(this, "Use a chisel on a piece of granite 5kg, and choose the head you decided on to craft.", chiselHighlighted, granite);
+		craftHead = new DetailedQuestStep(this, "Use a chisel on a piece of granite 5kg, and choose the head you decided on to craft.", chiselHighlighted,
+			granite);
 
-		chiselStatue = new ObjectStep(this, ObjectID.ENAKH_STATUE_EAST_MULTILOC, new WorldPoint(3190, 2926, 0), "Use a chisel on the headless statue.", chiselHighlighted);
+		chiselStatue = new ObjectStep(this, ObjectID.ENAKH_STATUE_EAST_MULTILOC, new WorldPoint(3190, 2926, 0), "Use a chisel on the headless statue.",
+			chiselHighlighted);
 		chiselStatue.addIcon(ItemID.CHISEL);
 
 		giveLazimHead = new NpcStep(this, NpcID.ENAKH_LAZIM, new WorldPoint(3190, 2925, 0), "Give Lazim the head.", head);
 
-		enterTemple = new ObjectStep(this, ObjectID.ENAKH_SECRET_BOULDER_MULTILOC_E, new WorldPoint(3194, 2925, 0), "Enter the temple south of the Bandit's Camp.");
-		enterTempleDownLadder = new ObjectStep(this, ObjectID.ENAKH_TEMPLE_LADDERDOWN, new WorldPoint(3127, 9329, 1), "Enter the temple south of the Bandit's Camp.");
+		enterTemple = new ObjectStep(this, ObjectID.ENAKH_SECRET_BOULDER_MULTILOC_E, new WorldPoint(3194, 2925, 0), "Enter the temple south of the Bandit's " +
+			"Camp.");
+		enterTempleDownLadder = new ObjectStep(this, ObjectID.ENAKH_TEMPLE_LADDERDOWN, new WorldPoint(3127, 9329, 1), "Enter the temple south of the Bandit's" +
+			" Camp.");
 		talkToLazimInTemple = new NpcStep(this, NpcID.ENAKH_LAZIM, new WorldPoint(3127, 9324, 0), "Talk to Lazim in the temple.");
 
-		cutOffLimb = new ObjectStep(this, ObjectID.ENAKH_FALLEN_STATUE_EAST_MULTILOC, new WorldPoint(3130, 9326, 0), "Use a chisel on the fallen statue to get all its limbs.", chiselHighlighted);
-		cutOffLimb.addDialogSteps("Remove the statue's left arm", "Remove the statue's right arm", "Remove the statue's left leg", "Remove the statue's right leg");
+		cutOffLimb = new ObjectStep(this, ObjectID.ENAKH_FALLEN_STATUE_EAST_MULTILOC, new WorldPoint(3130, 9326, 0), "Use a chisel on the fallen statue to " +
+			"get all its limbs.", chiselHighlighted);
+		cutOffLimb.addDialogSteps("Remove the statue's left arm", "Remove the statue's right arm", "Remove the statue's left leg", "Remove the statue's right" +
+			" leg");
+		cutOffLimb.addIcon(ItemID.CHISEL);
 
 		takeM = new ObjectStep(this, ObjectID.ENAKH_PEDESTAL_SIGIL_M, new WorldPoint(3128, 9319, 0), "Take the M sigil from the pedestal in the room.");
 		takeZ = new ObjectStep(this, ObjectID.ENAKH_PEDESTAL_SIGIL_Z, new WorldPoint(3097, 9336, 0), "Take the Z sigil from the pedestal in the north room.");
@@ -392,101 +430,199 @@ public class EnakhrasLament extends BasicQuestHelper
 		enterMDoor = new ObjectStep(this, ObjectID.ENAKH_DOOR_M_SIGIL, new WorldPoint(3097, 9312, 0), "Enter the door with an M.", mSigil);
 		enterZDoor = new ObjectStep(this, ObjectID.ENAKH_DOOR_Z_SIGIL, new WorldPoint(3104, 9305, 0), "Enter the door with a Z.", zSigil);
 
-		goUpToPuzzles = new ObjectStep(this, ObjectID.ENAKH_TEMPLE_LADDERUP, new WorldPoint(3104, 9309, 0), "Open the central room's doors using the metal letters. Go up the ladder in the central room.");
+		goUpToPuzzles = new ObjectStep(this, ObjectID.ENAKH_TEMPLE_LADDERUP, new WorldPoint(3104, 9309, 0), "Open the central room's doors using the metal " +
+			"letters. Go up the ladder in the central room.");
 
 		useSoftClayOnPedestal = new ObjectStep(this, ObjectID.ENAKH_PEDESTAL_MULTILOC, new WorldPoint(3104, 9312, 1),
 			"Use soft clay on the pedestal.", softClay.highlighted());
 		useChiselOnGranite = new DetailedQuestStep(this, "Use a chisel on granite (5kg).", granite, chiselHighlighted);
-		useStoneHeadOnPedestal = new ObjectStep(this, ObjectID.ENAKH_PEDESTAL_MULTILOC, new WorldPoint(3104, 9312, 1), "Use the camel stone head on the pedestal.", camelHead);
+		useStoneHeadOnPedestal = new ObjectStep(this, ObjectID.ENAKH_PEDESTAL_MULTILOC, new WorldPoint(3104, 9312, 1), "Use the camel stone head on the " +
+			"pedestal.", camelHead);
 		useStoneHeadOnPedestal.addIcon(ItemID.ENAKH_STONE_HEAD_AKTHANAKOS);
 
-		useBread = new NpcStep(this, NpcID.ENAKH_PENTYN, new WorldPoint(3091, 9324, 1), "Right-click use bread or cake on Pentyn.",	breadOrCake.highlighted());
-		castFireSpell = new NpcStep(this, NpcID.ENAKH_DUMMY_FOUNTAIN, new WorldPoint(3092, 9308, 1), "Cast a fire spell on the frozen fountain.", fireSpellRunes, onNormals);
-		castAirSpell = new NpcStep(this, NpcID.ENAKH_DUMMY_FURNACE, new WorldPoint(3116, 9323, 1), "Cast an air spell on the furnace.", airSpellRunes, onNormals);
-		useMapleLog = new ObjectStep(this, ObjectID.ENAKH_BRAZIER_4_MULTILOC, new WorldPoint(3114, 9309, 1), "Use a maple log on the north west brazier.", mapleLog);
-		useMapleLog.addIcon(ItemID.MAPLE_LOGS);
+		useBread = new NpcStep(this, NpcID.ENAKH_PENTYN, new WorldPoint(3091, 9324, 1), "Right-click use bread or cake on Pentyn.", breadOrCake.highlighted());
+		castFireSpell = new NpcStep(this, NpcID.ENAKH_DUMMY_FOUNTAIN, new WorldPoint(3092, 9308, 1), "Cast a fire spell on the frozen fountain.",
+			fireSpellRunes, onNormals);
+		castAirSpell = new NpcStep(this, NpcID.ENAKH_DUMMY_FURNACE, new WorldPoint(3116, 9323, 1), "Cast an air spell on the furnace.", airSpellRunes,
+			onNormals);
+
+		// Shadow Room Puzzle
+		useLog = new ObjectStep(this, ObjectID.ENAKH_BRAZIER_1_MULTILOC, new WorldPoint(3114, 9306, 1), "Use a normal log on the south west brazier.", log);
+		useLog.addIcon(ItemID.LOGS);
 		useOakLog = new ObjectStep(this, ObjectID.ENAKH_BRAZIER_2_MULTILOC, new WorldPoint(3116, 9306, 1), "Use an oak log on the south brazier.", oakLog);
 		useOakLog.addIcon(ItemID.OAK_LOGS);
-		useWillowLog = new ObjectStep(this, ObjectID.ENAKH_BRAZIER_1_MULTILOC, new WorldPoint(3114, 9306, 1), "Use a willow log on the south east brazier.", willowLog);
+		useWillowLog = new ObjectStep(this, ObjectID.ENAKH_BRAZIER_3_MULTILOC, new WorldPoint(3118, 9306, 1), "Use a willow log on the south east brazier.",
+			willowLog);
 		useWillowLog.addIcon(ItemID.WILLOW_LOGS);
-		useLog = new ObjectStep(this, ObjectID.ENAKH_BRAZIER_3_MULTILOC, new WorldPoint(3118, 9306, 1), "Use a normal log on the south west brazier.", log);
-		useLog.addIcon(ItemID.LOGS);
-		useCoal = new ObjectStep(this, ObjectID.ENAKH_BRAZIER_6_MULTILOC, new WorldPoint(3118, 9309, 1), "Use coal on the north east brazier.", coal);
-		useCoal.addIcon(ItemID.COAL);
+		useMapleLog = new ObjectStep(this, ObjectID.ENAKH_BRAZIER_4_MULTILOC, new WorldPoint(3114, 9309, 1), "Use a maple log on the north west brazier.",
+			mapleLog);
+		useMapleLog.addIcon(ItemID.MAPLE_LOGS);
 		useCandle = new ObjectStep(this, ObjectID.ENAKH_BRAZIER_5_MULTILOC, new WorldPoint(3116, 9309, 1), "Use a candle on the north brazier.", candle);
 		useCandle.addIcon(ItemID.UNLIT_CANDLE);
+		useCoal = new ObjectStep(this, ObjectID.ENAKH_BRAZIER_6_MULTILOC, new WorldPoint(3118, 9309, 1), "Use coal on the north east brazier.", coal);
+		useCoal.addIcon(ItemID.COAL);
 
 		passBarrier = new ObjectStep(this, ObjectID.ENAKH_MAGIC_WALL, new WorldPoint(3104, 9319, 1), "Pass through the magic barrier and go up the ladder.");
 		goUpFromPuzzleRoom = new ObjectStep(this, ObjectID.ENAKH_TEMPLE_LADDERUP, new WorldPoint(3104, 9332, 1), "Go up the ladder.");
 		passBarrier.addSubSteps(goUpFromPuzzleRoom);
 
-		castCrumbleUndead = new NpcStep(this, NpcID.ENAKH_BONEGUARD, new WorldPoint(3104, 9307, 2), "Cast crumble undead on the Boneguard.", earth2, airRuneOrStaff, chaos, onNormals);
+		castCrumbleUndead = new NpcStep(this, NpcID.ENAKH_BONEGUARD, new WorldPoint(3104, 9307, 2), "Cast crumble undead on the Boneguard.", earth2,
+			airRuneOrStaff, chaos, onNormals);
 
-		goDownToFinalRoom = new ObjectStep(this, ObjectID.ENAKH_TEMPLE_PILLAR_LADDER_TOP, new WorldPoint(3105, 9300, 2), "Climb down the stone ladder past the Boneguard.");
+		goDownToFinalRoom = new ObjectStep(this, ObjectID.ENAKH_TEMPLE_PILLAR_LADDER_TOP, new WorldPoint(3105, 9300, 2), "Climb down the stone ladder past " +
+			"the Boneguard.");
 
 		protectThenTalk = new NpcStep(this, NpcID.ENAKH_AKTHANAKOS_BONEGUARD, new WorldPoint(3105, 9297, 1),
 			"Put on Protect from Melee, then talk to the Boneguard.", protectFromMelee);
-		repairWall = new ObjectStep(this, ObjectID.ENAKH_LARGEWALL_L_MULTILOC, new WorldPoint(3107, 9291, 1), "Take sandstone from the nearby rubble, and use it to repair the south wall. For each piece added, use a chisel on the wall.", sandstone5);
+		repairWall = new ObjectStep(this, ObjectID.ENAKH_LARGEWALL_L_MULTILOC, new WorldPoint(3107, 9291, 1), "Take sandstone from the nearby rubble, and use" +
+			" it to repair the south wall. For each piece added, use a chisel on the wall.", sandstone5);
 		repairWall.addDialogSteps("Of course, I'll help you out.", "Okay, I'll start building.");
 		repairWall.addIcon(ItemID.ENAKH_SANDSTONE_MEDIUM);
 
-		useChiselOnWall = new ObjectStep(this, ObjectID.ENAKH_LARGEWALL_L_MULTILOC, new WorldPoint(3107, 9291, 1), "Use a chisel on the wall.", chiselHighlighted);
+		useChiselOnWall = new ObjectStep(this, ObjectID.ENAKH_LARGEWALL_L_MULTILOC, new WorldPoint(3107, 9291, 1), "Use a chisel on the wall.",
+			chiselHighlighted);
 		useChiselOnWall.addDialogSteps("Of course, I'll help you out.", "Okay, I'll start building.");
 		useChiselOnWall.addIcon(ItemID.CHISEL);
 		repairWall.addSubSteps(useChiselOnWall);
 
 		talkToAkthankos = new NpcStep(this, NpcID.ENAKH_AKTHANAKOS_BONEGUARD, new WorldPoint(3105, 9297, 1), "Talk to the Boneguard to finish the quest.");
-		((NpcStep) talkToAkthankos).addAlternateNpcs(NpcID.ENAKH_AKTHANAKOS_FREED);
+		talkToAkthankos.addAlternateNpcs(NpcID.ENAKH_AKTHANAKOS_FREED);
 
+	}
+
+	@Override
+	public Map<Integer, QuestStep> loadSteps()
+	{
+		initializeRequirements();
+		setupSteps();
+
+		var steps = new HashMap<Integer, QuestStep>();
+
+		steps.put(0, talkToLazim);
+
+		ConditionalStep makeAndPlaceBase = new ConditionalStep(this, bringLazim32Sandstone);
+		makeAndPlaceBase.addStep(new Conditions(head, granite), giveLazimHead);
+		makeAndPlaceBase.addStep(new Conditions(granite2, canChooseHead), craftHead);
+		makeAndPlaceBase.addStep(canChooseHead, getGranite);
+		makeAndPlaceBase.addStep(chiseledStatue, talkToLazimToChooseHead);
+		makeAndPlaceBase.addStep(hasPlacedBody, chiselStatue);
+		makeAndPlaceBase.addStep(body, placeBody);
+		makeAndPlaceBase.addStep(sandstone20, useChiselOn20Sandstone);
+		makeAndPlaceBase.addStep(hasTalkedToLazimAfterBase, bringLazim20Sandstone);
+		makeAndPlaceBase.addStep(hasPlacedBase, talkToLazimAboutBody);
+		makeAndPlaceBase.addStep(base, placeBase);
+		makeAndPlaceBase.addStep(sandstone32, useChiselOn32Sandstone);
+
+		steps.put(10, makeAndPlaceBase);
+
+		ConditionalStep exploreBottomLayer = new ConditionalStep(this, enterTemple);
+		exploreBottomLayer.addStep(new Conditions(camelHead, inPuzzleFloor), useStoneHeadOnPedestal);
+		exploreBottomLayer.addStep(camelMould, useChiselOnGranite);
+		exploreBottomLayer.addStep(inPuzzleFloor, useSoftClayOnPedestal);
+		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1, openedDoor2, openedDoor3, openedDoor4), goUpToPuzzles);
+		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1, openedDoor2, openedDoor3, rSigil), enterDoor4);
+		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1, openedDoor2, openedDoor3), takeR);
+		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1, openedDoor2, kSigil), enterDoor3);
+		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1, openedDoor2), takeK);
+		// It's possible to skip the rest of this, but it skips some of the quest story and leaves doors locked after you finish, so this encourages players
+		// to explore
+		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1, zSigil), enterDoor2);
+		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, openedDoor1), takeZ);
+		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor, mSigil), enterDoor1);
+		exploreBottomLayer.addStep(new Conditions(gottenLimbs, inTempleGroundFloor), takeM);
+		exploreBottomLayer.addStep(new Conditions(startedTemple, inTempleGroundFloor), cutOffLimb);
+		exploreBottomLayer.addStep(inTempleGroundFloor, talkToLazimInTemple);
+		exploreBottomLayer.addStep(inTempleEntranceRoom, enterTempleDownLadder);
+
+		steps.put(20, exploreBottomLayer);
+
+		ConditionalStep puzzles = new ConditionalStep(this, enterTemple);
+		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain, cleanedFurnace, litLog, litOak, litWillow, litMaple, litCandle), useCoal);
+		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain, cleanedFurnace, litLog, litOak, litWillow, litMaple), useCandle);
+		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain, cleanedFurnace, litLog, litOak, litWillow), useMapleLog);
+		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain, cleanedFurnace, litLog, litOak), useWillowLog);
+		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain, cleanedFurnace, litLog), useOakLog);
+		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain, cleanedFurnace), useLog);
+		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor, meltedFountain), castAirSpell);
+		puzzles.addStep(new Conditions(fedBread, inPuzzleFloor), castFireSpell);
+		puzzles.addStep(inPuzzleFloor, useBread);
+		puzzles.addStep(inTempleGroundFloor, goUpToPuzzles);
+		puzzles.addStep(inTempleEntranceRoom, enterTempleDownLadder);
+
+		steps.put(30, puzzles);
+
+		ConditionalStep topFloorPuzzle = new ConditionalStep(this, enterTemple);
+		topFloorPuzzle.addStep(inTopRoom, castCrumbleUndead);
+		topFloorPuzzle.addStep(inNorthPuzzleRoom, goUpFromPuzzleRoom);
+		topFloorPuzzle.addStep(inPuzzleFloor, passBarrier);
+		topFloorPuzzle.addStep(inTempleGroundFloor, goUpToPuzzles);
+		topFloorPuzzle.addStep(inTempleEntranceRoom, enterTempleDownLadder);
+
+		steps.put(40, topFloorPuzzle);
+
+		ConditionalStep protectMeleePuzzle = new ConditionalStep(this, enterTemple);
+		protectMeleePuzzle.addStep(inLastRoom, protectThenTalk);
+		protectMeleePuzzle.addStep(inTopRoom, goDownToFinalRoom);
+		protectMeleePuzzle.addStep(inNorthPuzzleRoom, goUpFromPuzzleRoom);
+		protectMeleePuzzle.addStep(inPuzzleFloor, passBarrier);
+		protectMeleePuzzle.addStep(inTempleGroundFloor, goUpToPuzzles);
+		protectMeleePuzzle.addStep(inTempleEntranceRoom, enterTempleDownLadder);
+
+		steps.put(50, protectMeleePuzzle);
+
+		ConditionalStep repairWallForAkthankos = new ConditionalStep(this, enterTemple);
+		repairWallForAkthankos.addStep(new Conditions(inLastRoom, wallNeedsChisel), useChiselOnWall);
+		repairWallForAkthankos.addStep(new Conditions(inLastRoom, finishedWall), talkToAkthankos);
+		repairWallForAkthankos.addStep(inLastRoom, repairWall);
+		repairWallForAkthankos.addStep(inTopRoom, goDownToFinalRoom);
+		repairWallForAkthankos.addStep(inNorthPuzzleRoom, goUpFromPuzzleRoom);
+		repairWallForAkthankos.addStep(inPuzzleFloor, passBarrier);
+		repairWallForAkthankos.addStep(inTempleGroundFloor, goUpToPuzzles);
+		repairWallForAkthankos.addStep(inTempleEntranceRoom, enterTempleDownLadder);
+
+		steps.put(60, repairWallForAkthankos);
+
+		return steps;
 	}
 
 	@Override
 	public List<ItemRequirement> getItemRequirements()
 	{
-		ArrayList<ItemRequirement> reqs = new ArrayList<>();
-		reqs.add(pickaxe);
-		reqs.add(chiselHighlighted);
-		reqs.add(softClay);
-		reqs.add(breadOrCake);
-		reqs.add(tinderbox);
-		reqs.add(log);
-		reqs.add(oakLog);
-		reqs.add(willowLog);
-		reqs.add(mapleLog);
-		reqs.add(candle);
-		reqs.add(coal);
-		reqs.add(fireSpellRunes);
-		reqs.add(airSpellRunes);
-		reqs.add(crumbleUndeadRunes);
-		int miningLevel = client.getRealSkillLevel(Skill.MINING);
-		if (miningLevel < 45)
-		{
-			reqs.add(granite2);
-		}
-		if (miningLevel < 35)
-		{
-			reqs.add(sandstone52);
-		}
-		return reqs;
+		return List.of(
+			pickaxe,
+			chiselHighlighted,
+			softClay,
+			breadOrCake,
+			tinderbox,
+			log,
+			oakLog,
+			willowLog,
+			mapleLog,
+			candle,
+			coal,
+			fireSpellRunes,
+			airSpellRunes,
+			crumbleUndeadRunes,
+			granite2.hideConditioned(new SkillRequirement(Skill.MINING, 45)),
+			sandstone52.hideConditioned(new SkillRequirement(Skill.MINING, 35))
+		);
 	}
 
 	@Override
 	public List<Requirement> getGeneralRecommended()
 	{
-		ArrayList<Requirement> req = new ArrayList<>();
-		req.add(onNormals);
-		return req;
+		return List.of(onNormals);
 	}
 
 	@Override
 	public List<Requirement> getGeneralRequirements()
 	{
-		ArrayList<Requirement> req = new ArrayList<>();
-		req.add(new SkillRequirement(Skill.CRAFTING, 50));
-		req.add(new SkillRequirement(Skill.FIREMAKING, 45, true));
-		req.add(new SkillRequirement(Skill.PRAYER, 43));
-		req.add(new SkillRequirement(Skill.MAGIC, 39));
-		return req;
+		return List.of(
+			new SkillRequirement(Skill.CRAFTING, 50),
+			new SkillRequirement(Skill.FIREMAKING, 45, true),
+			new SkillRequirement(Skill.PRAYER, 43),
+			new SkillRequirement(Skill.MAGIC, 39)
+		);
 	}
 
 	@Override
@@ -498,31 +634,50 @@ public class EnakhrasLament extends BasicQuestHelper
 	@Override
 	public List<ExperienceReward> getExperienceRewards()
 	{
-		return Arrays.asList(
-				new ExperienceReward(Skill.CRAFTING, 7000),
-				new ExperienceReward(Skill.MINING, 7000),
-				new ExperienceReward(Skill.FIREMAKING, 7000),
-				new ExperienceReward(Skill.MAGIC, 7000));
+		return List.of(
+			new ExperienceReward(Skill.CRAFTING, 7000),
+			new ExperienceReward(Skill.MINING, 7000),
+			new ExperienceReward(Skill.FIREMAKING, 7000),
+			new ExperienceReward(Skill.MAGIC, 7000)
+		);
 	}
 
 	@Override
 	public List<ItemReward> getItemRewards()
 	{
-		return Collections.singletonList(new ItemReward("Akthanakos's Camulet", ItemID.CAMULET, 1));
+		return List.of(
+			new ItemReward("Akthanakos's Camulet", ItemID.CAMULET, 1)
+		);
 	}
 
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		List<PanelDetails> allSteps = new ArrayList<>();
-		allSteps.add(new PanelDetails("Starting off", Collections.singletonList(talkToLazim)));
-		allSteps.add(new PanelDetails("Craft a statue", Arrays.asList(bringLazim32Sandstone, useChiselOn32Sandstone, placeBase, talkToLazimAboutBody,
-			bringLazim20Sandstone, useChiselOn20Sandstone, placeBody, chiselStatue, talkToLazimToChooseHead, getGranite, craftHead, giveLazimHead),
-			pickaxe, chiselHighlighted, softClay, breadOrCake, tinderbox, log, oakLog, willowLog, mapleLog, candle, coal, fireSpellRunes, airSpellRunes, earth2, air2, chaos));
-		allSteps.add(new PanelDetails("Explore the ground floor", Arrays.asList(talkToLazimInTemple, cutOffLimb, takeM, enterDoor1, enterDoor2, enterMDoor, goUpToPuzzles)));
-		allSteps.add(new PanelDetails("Solve the puzzles", Arrays.asList(useSoftClayOnPedestal, useChiselOnGranite, useStoneHeadOnPedestal, useBread, castFireSpell, castAirSpell,
-			useLog, useOakLog, useWillowLog, useMapleLog, useCandle, useCoal)));
-		allSteps.add(new PanelDetails("Free Akthankos", Arrays.asList(passBarrier, goUpFromPuzzleRoom, castCrumbleUndead, goDownToFinalRoom, protectThenTalk, repairWall, talkToAkthankos)));
+		var allSteps = new ArrayList<PanelDetails>();
+
+		allSteps.add(new PanelDetails("Starting off", List.of(
+			talkToLazim
+		)));
+
+		allSteps.add(new PanelDetails("Craft a statue", List.of(
+			bringLazim32Sandstone, useChiselOn32Sandstone, placeBase, talkToLazimAboutBody, bringLazim20Sandstone,
+			useChiselOn20Sandstone, placeBody, chiselStatue, talkToLazimToChooseHead, getGranite, craftHead, giveLazimHead
+		), List.of(pickaxe, chiselHighlighted, softClay, breadOrCake, tinderbox, log, oakLog, willowLog, mapleLog, candle, coal, fireSpellRunes,
+			airSpellRunes, earth2, air2, chaos
+		)));
+
+		allSteps.add(new PanelDetails("Explore the ground floor", List.of(
+			talkToLazimInTemple, cutOffLimb, takeM, enterDoor1, enterDoor2, enterMDoor, goUpToPuzzles
+		)));
+
+		allSteps.add(new PanelDetails("Solve the puzzles", List.of(
+			useSoftClayOnPedestal, useChiselOnGranite, useStoneHeadOnPedestal, useBread, castFireSpell, castAirSpell,
+			useLog, useOakLog, useWillowLog, useMapleLog, useCandle, useCoal
+		)));
+
+		allSteps.add(new PanelDetails("Free Akthankos", List.of(
+			passBarrier, goUpFromPuzzleRoom, castCrumbleUndead, goDownToFinalRoom, protectThenTalk, repairWall, talkToAkthankos
+		)));
 
 		return allSteps;
 	}
